# django-docker-setup

./: Dockerfile.dev  Makefile  READEME.md  db.sqlite3  docker-compose.dev.yml  pyproject.toml
backend/: settings.py
base/: admin.py  models.py
base/migrations/: 0001_initial.py  0002_event_test2.py
